--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Hamba</title>
+    <link rel="shortcut icon" href="./images/Header/logo.jpg" type="image/x-icon">
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
