--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   </head>
-  <body class="overflow-auto">
+  <body class="overflow-hidden">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
