--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#" data-aos="zoom-in">
+          <a class="navbar-brand" href="#" >
             <img
               src="./images/Header/logo.jpg"
               alt=""
@@ -55,11 +55,11 @@
                 class="nav-link active link-primary ms-2"
                 aria-current="page"
                 href="#"
-                data-aos="zoom-in" data-aos-delay="500">হোম</a
+                >হোম</a
               >
-              <a class="nav-link ms-2" href="#" data-aos="zoom-in" data-aos-delay="1000">মেনু</a>
-              <a class="nav-link ms-2" href="#" data-aos="zoom-in" data-aos-delay="1500">ঈদ স্পেশাল</a>
-              <a class="nav-link ms-2" href="#" data-aos="zoom-in" data-aos-delay="1950">কুরআনের বানী</a>
+              <a class="nav-link ms-2" href="#">মেনু</a>
+              <a class="nav-link ms-2" href="#">ঈদ স্পেশাল</a>
+              <a class="nav-link ms-2" href="#">কুরআনের বানী</a>
             </div>
           </div>
         </div>
@@ -76,7 +76,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                    <div class="d-flex row gx-2 align-items-center">
-                     <div class="col-lg-5 mt-3  " data-aos="fade-right" data-aos-delay="2000">
+                     <div class="col-lg-5 mt-3  " data-aos="fade-right">
   
                        <h2 class="text-center"> 
                         <b class="text-danger"> নিরাপদ থাকাটাই জরুরী এখন, </b> <br><span class="text-muted">হাটে না গিয়েও হাট যখন তখন</span> 
@@ -84,7 +84,7 @@
                        <button class="btn btn-warning rounded rounded-pill d-block mx-auto mt-3">EXPLORE ALL CATTLE</button>
   
                      </div>
-                     <div class="col-lg-7" data-aos="fade-left" data-aos-delay="2500"> <img src="./images/cow1.png" class="d-block w-100 h-100" alt="..."></div>
+                     <div class="col-lg-7" > <img src="./images/cow1.png" class="d-block w-100 h-100" alt="..."></div>
                    </div>
               </div>
               <div class="carousel-item">
