--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                    <div class="d-flex row gx-2 align-items-center">
-                     <div class="col-lg-5 mt-3  " data-aos="fade-right">
+                     <div class="col-lg-5 mt-3  ">
   
                        <h2 class="text-center"> 
                         <b class="text-danger"> নিরাপদ থাকাটাই জরুরী এখন, </b> <br><span class="text-muted">হাটে না গিয়েও হাট যখন তখন</span> 
